# fanos-protocol

./: .dockerignore  Dockerfile  README.md
rust/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
rust/crates/fanos-angelos/: Cargo.toml
rust/crates/fanos-angelos/src/: attachment.rs  bot.rs  call.rs  chain.rs  group.rs  lib.rs  media.rs  message.rs  ratchet.rs  session.rs
rust/crates/fanos-angelos/tests/: conformance.rs
rust/crates/fanos-aphantos/: Cargo.toml
rust/crates/fanos-aphantos/src/: lib.rs  node.rs  nostos.rs  sealed.rs  surb.rs  threshold.rs  threshold_router.rs
rust/crates/fanos-aphantos/tests/: flow_correlation.rs  holonomy_verification.rs  onion_tamper.rs  props.rs  replay_attack.rs
rust/crates/fanos-bench/: Cargo.toml
rust/crates/fanos-bench/benches/: hot_paths.rs
rust/crates/fanos-bench/src/: lib.rs
rust/crates/fanos-calypso/: Cargo.toml
rust/crates/fanos-calypso/src/: address.rs  balance.rs  descriptor.rs  hosting.rs  lib.rs  pow.rs  rendezvous.rs  stabilize.rs
rust/crates/fanos-calypso/tests/: conformance.rs  entry_unlinkability.rs  props.rs  statistical_disclosure.rs
rust/crates/fanos-cli/: Cargo.toml
rust/crates/fanos-cli/src/: main.rs
rust/crates/fanos-cli/tests/: conformance_vectors.rs
rust/crates/fanos-code/: Cargo.toml
rust/crates/fanos-code/src/: da.rs  erasure.rs  hamming.rs  lib.rs  lrc.rs  syndrome.rs
rust/crates/fanos-code/tests/: props.rs
rust/crates/fanos-core/: Cargo.toml
rust/crates/fanos-core/src/: admission.rs  hierarchy.rs  lib.rs  membership.rs  quorum.rs  roles.rs  routing.rs  stratum.rs
rust/crates/fanos-core/tests/: e2e.rs  self_organization.rs
rust/crates/fanos-crypto/: Cargo.toml
rust/crates/fanos-crypto/src/: hash.rs  identity.rs  kem.rs  keys.rs  lib.rs  shamir.rs  sig.rs
rust/crates/fanos-crypto/tests/: props.rs
rust/crates/fanos-diakrisis/: Cargo.toml
rust/crates/fanos-diakrisis/src/: blindness.rs  cbf.rs  coherence.rs  dynamics.rs  eig.rs  healing.rs  hierarchy.rs  homeostat.rs  lib.rs  loadbalance.rs  mathfns.rs  monitor.rs  partition.rs  plan.rs  polar.rs  regeneration.rs  stability.rs  vitals.rs  window.rs
rust/crates/fanos-diakrisis/tests/: props.rs
rust/crates/fanos-diaulos/: Cargo.toml
rust/crates/fanos-diaulos/src/: cell.rs  conn.rs  endpoint.rs  frame.rs  handshake.rs  lib.rs  overlay.rs  session.rs
rust/crates/fanos-diaulos/tests/: conformance.rs  robustness.rs
rust/crates/fanos-dromos/: Cargo.toml
rust/crates/fanos-dromos/src/: bridge.rs  hermes.rs  hybrid.rs  lib.rs  naming.rs  scheduler.rs  storage.rs  token.rs
rust/crates/fanos-ffi/: Cargo.toml
rust/crates/fanos-ffi/include/: fanos.h
rust/crates/fanos-ffi/src/: lib.rs
rust/crates/fanos-field/: Cargo.toml
rust/crates/fanos-field/src/: gf2m.rs  gfp.rs  lib.rs
rust/crates/fanos-field/tests/: props.rs
rust/crates/fanos-geometry/: Cargo.toml
rust/crates/fanos-geometry/src/: element.rs  fano.rs  flag.rs  hierarchy.rs  lib.rs  plane.rs
rust/crates/fanos-geometry/tests/: props.rs
rust/crates/fanos-hermes/: Cargo.toml
rust/crates/fanos-hermes/src/: htlc.rs  lib.rs
rust/crates/fanos-holarch/: Cargo.toml
rust/crates/fanos-holarch/src/: aspect.rs  gamma.rs  instance.rs  lib.rs  panel.rs  verdict.rs
rust/crates/fanos-holarch/tests/: gate.rs
rust/crates/fanos-incentives/: Cargo.toml
rust/crates/fanos-incentives/src/: lib.rs
rust/crates/fanos-keygen/: Cargo.toml
rust/crates/fanos-keygen/src/: beacon.rs  lib.rs  recovery.rs
rust/crates/fanos-node/: Cargo.toml
rust/crates/fanos-node/src/: bridge.rs  capdir.rs  cell_node.rs  config.rs  crosscell_dir.rs  diaulos.rs  epoch_driver.rs  error.rs  exit.rs  identity.rs  ingress_node.rs  lib.rs  loaddir.rs  mix_relay.rs  mixdir.rs  node.rs  overlay_beacon.rs  poros.rs  proxy.rs  rendezvous.rs  rendezvous_host.rs  rendezvous_relay.rs  resolve.rs  role_loop.rs  service_node.rs  sybil.rs  taxis_config.rs  taxis_driver.rs  threshold_rendezvous.rs  threshold_service.rs
rust/crates/fanos-node/tests/: anonymous_quic.rs  diaulos_quic.rs  dromos_quic.rs  epoch_clock.rs  exit_quic.rs  mix_directory_quic.rs  proxy.rs  taxis_quic.rs
rust/crates/fanos-nyx/: Cargo.toml
rust/crates/fanos-nyx/src/: guard.rs  lib.rs  mathfns.rs  mixing.rs  path.rs  profile.rs  ratchet.rs  security.rs  sheaf.rs  tessera.rs
rust/crates/fanos-nyx/tests/: predecessor.rs  props.rs
rust/crates/fanos-obolos/: Cargo.toml
rust/crates/fanos-obolos/src/: build.rs  codec.rs  commit.rs  lib.rs  note.rs  note_cipher.rs  nullifier.rs  state.rs  tree.rs  tx.rs  wallet.rs
rust/crates/fanos-obolos/tests/: scenarios.rs
rust/crates/fanos-observatory/: Cargo.toml
rust/crates/fanos-observatory/src/: app.rs  cluster_dashboard.rs  lib.rs  live.rs  main.rs  metrics.rs  source.rs  ui.rs
rust/crates/fanos-onoma/: Cargo.toml
rust/crates/fanos-onoma/src/: address.rs  bech32.rs  derive.rs  error.rs  lib.rs  mnemonic.rs  name.rs  registry.rs  zone.rs
rust/crates/fanos-onoma/tests/: conformance.rs
rust/crates/fanos-ports/: Cargo.toml
rust/crates/fanos-ports/src/: lib.rs
rust/crates/fanos-pqcrypto/: Cargo.toml
rust/crates/fanos-pqcrypto/src/: identity.rs  kem.rs  lib.rs  onion_ratchet.rs  rng.rs  sig.rs
rust/crates/fanos-pqcrypto/tests/: props.rs
rust/crates/fanos-primitives/: Cargo.toml
rust/crates/fanos-primitives/src/: address.rs  aead.rs  beacon.rs  codec.rs  collections.rs  epoch.rs  hash.rs  keys.rs  lib.rs  maptopoint.rs  shamir.rs  (+1 more)
rust/crates/fanos-proteus/: Cargo.toml
rust/crates/fanos-proxy/: Cargo.toml
rust/crates/fanos-quic/: Cargo.toml
rust/crates/fanos-rendezvous/: Cargo.toml
rust/crates/fanos-runtime/: Cargo.toml
rust/crates/fanos-session/: Cargo.toml
rust/crates/fanos-sim/: Cargo.toml
rust/crates/fanos-stream/: Cargo.toml
rust/crates/fanos-taxis/: Cargo.toml
rust/crates/fanos-telemetry/: Cargo.toml
rust/crates/fanos-thesauros/: Cargo.toml
rust/crates/fanos-vpn/: Cargo.toml
rust/crates/fanos-vrf/: Cargo.toml
rust/crates/fanos-wasm/: Cargo.toml
rust/crates/fanos-wire/: Cargo.toml
rust/crates/fanos-wire-derive/: Cargo.toml
(+232 files in other folders)
