# FANOS — reference implementation (Rust).
#
# A Cargo virtual workspace whose crates mirror the protocol's module structure
# (spec Part XI): the layers L0–L7 plus the cross-cutting DIAKRISIS plane, each a
# separate crate with a clean interface, so a build selects exactly what it needs
# ("DHT only", "DHT+VPN", or the full mixnet+services stack) and stays wire-compatible
# with the others via the canonical encoding (spec Part VII §7.9).
[workspace]
resolver = "3"
members = [
    "crates/fanos-field",
    "crates/fanos-geometry",
    "crates/fanos-code",
    "crates/fanos-diakrisis",
    "crates/fanos-wire",
    "crates/fanos-wire-derive",
    "crates/fanos-primitives",
    "crates/fanos-aphantos",
    "crates/fanos-calypso",
    "crates/fanos-core",
    "crates/fanos-nyx",
    "crates/fanos-pqcrypto",
    "crates/fanos-proteus",
    "crates/fanos-quic",
    "crates/fanos-runtime",
    "crates/fanos-vrf",
    "crates/fanos-onoma",
    "crates/fanos-incentives",
    "crates/fanos-keygen",
    "crates/fanos-sim",
    "crates/fanos-diaulos",
    "crates/fanos-telemetry",
    "crates/fanos-session",
    "crates/fanos-rendezvous",
    "crates/fanos-node",
    "crates/fanos-proxy",
    "crates/fanos-cli",
    "crates/fanos-bench",
    "crates/fanos-observatory",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "MIT"
repository = "https://github.com/old8man/fanos-protocol"
authors = ["FANOS contributors"]
description = "FANOS — a projective-plane-addressed overlay network (reference implementation)"
keywords = ["p2p", "overlay", "anonymity", "post-quantum", "projective-plane"]
categories = ["network-programming", "cryptography"]

# ----------------------------------------------------------------------------
# Strictest-standard lint policy, shared by every crate via `[lints] workspace = true`.
# CI runs `cargo clippy --all-targets -- -D warnings`, so each of these is a hard gate.
# ----------------------------------------------------------------------------
[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"                  # math crates further tighten this to `forbid`
unreachable_pub = "warn"
unused_qualifications = "warn"
elided_lifetimes_in_paths = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Correctness/robustness lints escalated to hard errors.
unwrap_used = "warn"
expect_used = "warn"
panic_in_result_fn = "warn"
indexing_slicing = "warn"
# Pragmatic allowances: FANOS deliberately truncates in field reduction and carries
# domain terminology that trips a few stylistic pedantic lints.
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_lossless = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"   # small counts (n ≤ cell size) cast to f64; no real loss
cast_possible_wrap = "allow"    # bounded small indices/exponents
similar_names = "allow"
doc_markdown = "allow"
inline_always = "allow"
many_single_char_names = "allow" # dense numerical kernels use math-style names
missing_errors_doc = "allow"     # error types (WireError etc.) are self-documenting enums

[workspace.dependencies]
# Foundational math crates are zero-dependency; only fanos-primitives and above pull externals.
fanos-field = { path = "crates/fanos-field", version = "0.1.0", default-features = false }
fanos-geometry = { path = "crates/fanos-geometry", version = "0.1.0", default-features = false }
fanos-code = { path = "crates/fanos-code", version = "0.1.0", default-features = false }
fanos-diakrisis = { path = "crates/fanos-diakrisis", version = "0.1.0", default-features = false }
fanos-wire = { path = "crates/fanos-wire", version = "0.1.0", default-features = false }
fanos-wire-derive = { path = "crates/fanos-wire-derive", version = "0.1.0" }
fanos-primitives = { path = "crates/fanos-primitives", version = "0.1.0", default-features = false }
fanos-pqcrypto = { path = "crates/fanos-pqcrypto", version = "0.1.0" }
fanos-onoma = { path = "crates/fanos-onoma", version = "0.1.0", default-features = false }
fanos-core = { path = "crates/fanos-core", version = "0.1.0", default-features = false }
fanos-runtime = { path = "crates/fanos-runtime", version = "0.1.0", default-features = false }
fanos-telemetry = { path = "crates/fanos-telemetry", version = "0.1.0", default-features = false }
# Privacy / transport / service layers and the DKG node — declared here so every consumer references
# them uniformly as `<crate>.workspace = true`, never a bare `path` (one source of truth for versions).
fanos-proteus = { path = "crates/fanos-proteus", version = "0.1.0", default-features = false }
fanos-vrf = { path = "crates/fanos-vrf", version = "0.1.0", default-features = false }
fanos-incentives = { path = "crates/fanos-incentives", version = "0.1.0", default-features = false }
fanos-aphantos = { path = "crates/fanos-aphantos", version = "0.1.0" }
fanos-calypso = { path = "crates/fanos-calypso", version = "0.1.0" }
fanos-diaulos = { path = "crates/fanos-diaulos", version = "0.1.0" }
fanos-keygen = { path = "crates/fanos-keygen", version = "0.1.0" }
fanos-quic = { path = "crates/fanos-quic", version = "0.1.0" }
fanos-session = { path = "crates/fanos-session", version = "0.1.0" }
fanos-rendezvous = { path = "crates/fanos-rendezvous", version = "0.1.0" }
fanos-proxy = { path = "crates/fanos-proxy", version = "0.1.0" }

# External dependencies (isolated to the crypto/privacy layers and above).
blake3 = { version = "1", default-features = false }
chacha20poly1305 = { version = "0.11", default-features = false, features = ["alloc"] }
# Secret-material zeroization (wipe key bytes on drop). `no_std`; crates opt into `alloc` as needed.
zeroize = { version = "1", default-features = false }
# `libm` float backend for the no_std DIAKRISIS/NYX math (an optional dep in those crates).
libm = { version = "0.2", default-features = false }
# The RustCrypto RNG trait line (0.10), used by the PQ-KEM/onion/driver crates. NB: fanos-vrf,
# -incentives, and -sim pin rand_core 0.6 locally — the curve25519-dalek v4 / vrf-r255 ecosystem —
# a genuine two-major-version split that collapses only when those upstreams migrate.
rand_core = { version = "0.10", default-features = false }
# ristretto255 group ops for the verifiable-crypto crates (ECVRF, VOPRF).
curve25519-dalek = { version = "4", features = ["rand_core"] }

# Async runtime + tracing for the I/O driver layer (quic/node/proxy/session). Base version here; each
# driver selects only the tokio features it needs.
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }

# The real post-quantum hybrid primitives (Ed25519+ML-DSA-65, X25519+ML-KEM-768) live in the
# `fanos-pqcrypto` crate (RustCrypto `ed25519-dalek`/`x25519-dalek`/`ml-kem`/`ml-dsa`, all `no_std`),
# which owns those dependencies directly — so the light math core (`fanos-primitives`, BLAKE3-only) stays
# free of them and only the crates that need real keys pull them in.

# Terminal UI for the operator observatory (`fanos-monitor`): a native, embedded-friendly TUI — no
# browser, minimal resources. `crossterm` is the terminal backend.
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"

# Test-only: property-based testing across all crates.
proptest = "1"

# Proc-macro toolchain — used ONLY by the `fanos-wire-derive` build-time crate (compile-time deps; they
# do not ship in any binary), so the runtime/foundational crates stay dependency-light.
syn = { version = "2", features = ["derive"] }
quote = "1"
proc-macro2 = "1"

fanos-nyx = { path = "crates/fanos-nyx", version = "0.1.0", default-features = false }
fanos-sim = { path = "crates/fanos-sim", version = "0.1.0", default-features = false }
# (fanos-observatory, -node, -cli are binary crates — nothing depends on them, so no table entry.)

# ----------------------------------------------------------------------------
# Build profiles. FANOS targets "extreme performance"; the default release build
# stays fast to compile, and `maxperf` is the ship profile (whole-program LTO).
# ----------------------------------------------------------------------------
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
debug = false

# Ship / benchmark profile: whole-program optimization, single codegen unit.
[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
lto = "fat"
codegen-units = 1
