[package]
name = "fanos-aphantos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "APHANTOS integration: a KEM-sealed NYX onion and a sans-I/O NyxNode engine that routes it (spec §L5)."
keywords = ["onion-routing", "anonymity", "post-quantum", "sans-io", "fanos"]
categories = ["cryptography", "network-programming"]

[dependencies]
fanos-field = { workspace = true, features = ["std"] }
fanos-geometry = { workspace = true, features = ["std"] }
fanos-primitives = { workspace = true, features = ["std", "aead"] }
fanos-wire = { workspace = true, features = ["std"] }
fanos-nyx = { workspace = true, features = ["std"] }
# NyxNode / ThresholdRouter are sans-I/O engines that speak only the contract vocabulary — the light leaf,
# not the whole OverlayNode engine crate (audit #73/#125).
fanos-ports = { workspace = true, features = ["std"] }
fanos-pqcrypto.workspace = true
rand_core.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
