[package]
name = "fanos-calypso"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CALYPSO — anonymous hidden services for FANOS: self-certifying .fanos addresses, computed rendezvous, threshold hosting (spec Part XII)."
keywords = ["hidden-service", "onion-service", "anonymity", "threshold", "fanos"]
categories = ["cryptography", "network-programming"]

[dependencies]
fanos-field.workspace = true
fanos-geometry.workspace = true
fanos-primitives.workspace = true
fanos-onoma.workspace = true
# The DIAKRISIS spectral gap Δ = (G − max_k T_k)/6 (T-226(v)) that the admission controller's
# relaxation rate is derived from — one Δ for healing and for admission (derive, don't tune).
fanos-diakrisis.workspace = true
chacha20poly1305 = { workspace = true }

[features]
default = ["std"]
std = ["fanos-geometry/std", "fanos-primitives/std", "fanos-onoma/std", "fanos-diakrisis/std"]
alloc = [
    "fanos-geometry/alloc",
    "fanos-primitives/alloc",
    "fanos-onoma/alloc",
    "fanos-diakrisis/libm",
]

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
