[package]
name = "fanos-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FANOS overlay core: coordinates, O(1) rendezvous, Maekawa quorums, projective storage, cell hierarchy."
keywords = ["overlay", "p2p", "rendezvous", "quorum", "fanos"]
categories = ["network-programming"]

[dependencies]
fanos-field.workspace = true
fanos-geometry.workspace = true
fanos-code.workspace = true
fanos-primitives.workspace = true
fanos-diakrisis.workspace = true
# The real, verifiable coordinate VRF (spec §L0/§L3): a node's coordinate is MapToPoint(VRF(sk, epoch‖
# beacon)), proven + checked here — replacing the forgeable placeholder. fanos-vrf is no_std.
fanos-vrf.workspace = true

[features]
default = ["std"]
# `alloc` is the no_std substrate; `std` builds on it. A no_std embedded build selects `alloc` + `libm`,
# matching the crate's `no-std` category claim (the overlay core is heapful but does not require `std`).
std = [
    "alloc",
    "fanos-geometry/std",
    "fanos-code/std",
    "fanos-primitives/std",
    "fanos-diakrisis/std",
]
alloc = [
    "fanos-geometry/alloc",
    "fanos-code/alloc",
    "fanos-primitives/alloc",
    "fanos-diakrisis/alloc",
]
# For no_std targets: supply DIAKRISIS's float backend (used by the stratified healing budget).
libm = ["fanos-diakrisis/libm"]

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
