[package]
name = "fanos-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FANOS cryptographic surface: domain-separated BLAKE3, MapToPoint addressing, Shamir threshold sharing, hybrid keys."
keywords = ["cryptography", "blake3", "threshold", "post-quantum", "fanos"]
categories = ["cryptography", "no-std"]

[dependencies]
fanos-field.workspace = true
fanos-geometry.workspace = true
blake3 = { workspace = true }
# Wipe Shamir share bytes (secret) on drop. `alloc` for the `Vec<u8>` share value; stays `no_std`.
zeroize = { workspace = true, features = ["alloc"] }
# Hybrid node-identity signatures (spec §7.1): classical Ed25519 + post-quantum ML-DSA-65 (FIPS 204).
ed25519-dalek = { workspace = true }
fips204 = { workspace = true, features = ["ml-dsa-65"] }

[features]
default = ["std"]
std = ["alloc", "blake3/std", "fanos-geometry/std"]
alloc = ["fanos-geometry/alloc"]

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
