[package]
name = "fanos-diakrisis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "DIAKRISIS — the FANOS self-diagnosis plane: coherence matrix, Φ/P/R, polar sum-rules, partition, self-healing."
keywords = ["diagnosis", "coherence-matrix", "self-healing", "fano", "fanos"]
categories = ["mathematics", "algorithms"]

[dependencies]
fanos-field.workspace = true
fanos-geometry.workspace = true
fanos-code.workspace = true
# Float math for no_std builds (std uses hardware intrinsics instead).
libm = { workspace = true, optional = true }

[features]
default = ["std"]
# `alloc` is the no_std substrate (the crate uses `Vec`/`BTreeMap` unconditionally); `std` builds on it
# and adds hardware float intrinsics. A no_std embedded build selects `alloc` + `libm`.
std = ["alloc", "fanos-geometry/std", "fanos-code/std"]
alloc = ["fanos-geometry/alloc", "fanos-code/alloc"]
# Enable on no_std targets to supply sqrt via libm.
libm = ["dep:libm"]

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
